--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,11 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.19.0",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^6.19.0"
   },
   "devDependencies": {
