--- a/backend/package.json
+++ b/backend/package.json
@@ -13,11 +13,15 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.19.0",
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
+    "p-limit": "^7.2.0",
     "prisma": "^6.19.0"
   },
   "devDependencies": {
