--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,8 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "p-limit": "^7.2.0",
-    "prisma": "^6.19.0"
+    "prisma": "^6.19.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
